// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationAccordionModal Snapshop test for NotificationAccordionModal with notifications 1`] = `
<accordionmodal-stub header="alerts" content="" footer="" class="m-2">
  <accordion-stub title="event name" content="" isopen="true" shouldemitviewed="true" titlefontweight="font-normal" animation="zoom-out">
    <div class="p-2">
      <div class="modal-card-body bg-white p-4 md:p-6 text-sm sm:text-base md:text-lg">
        <p class="mb-4">clean HTML message</p>
      </div>
    </div>
  </accordion-stub>
</accordionmodal-stub>
`;

exports[`NotificationAccordionModal Snapshop test for NotificationAccordionModal with unread notification 1`] = `
<accordionmodal-stub header="alerts" content="" footer="" class="m-2">
  <accordion-stub title="event name" content="" isopen="true" shouldemitviewed="true" titlefontweight="font-semibold" animation="zoom-out">
    <div class="p-2">
      <div class="modal-card-body bg-white p-4 md:p-6 text-sm sm:text-base md:text-lg">
        <p class="mb-4">clean HTML message</p>
      </div>
    </div>
  </accordion-stub>
</accordionmodal-stub>
`;

exports[`NotificationAccordionModal Snapshop test for NotificationAccordionModal without event name 1`] = `
<accordionmodal-stub header="alerts" content="" footer="" class="m-2">
  <accordion-stub title="event name" content="" isopen="true" shouldemitviewed="true" titlefontweight="font-normal" animation="zoom-out">
    <div class="p-2">
      <div class="modal-card-body bg-white p-4 md:p-6 text-sm sm:text-base md:text-lg">
        <p class="mb-4">clean HTML message</p>
      </div>
    </div>
  </accordion-stub>
</accordionmodal-stub>
`;

exports[`NotificationAccordionModal Snapshop test for NotificationAccordionModal without notifications 1`] = `
<accordionmodal-stub header="alerts" content="" footer="" class="m-2">
  <accordion-stub title="event name" content="" isopen="true" shouldemitviewed="true" titlefontweight="font-normal" animation="zoom-out">
    <div class="p-2">
      <div class="modal-card-body bg-white p-4 md:p-6 text-sm sm:text-base md:text-lg">
        <p class="mb-4">clean HTML message</p>
      </div>
    </div>
  </accordion-stub>
</accordionmodal-stub>
`;
